--- a/css/base/_fonts.scss
+++ b/css/base/_fonts.scss
@@ -1,1 +1,2 @@
-@import url("https://fonts.googleapis.com/css?family=Charmonman");
+//@import url("https://fonts.googleapis.com/css?family=Charmonman");
+@import url("https://fonts.googleapis.com/css?family=EB+Garamond:400,700");
