--- a/css/style.scss
+++ b/css/style.scss
@@ -4,7 +4,8 @@
 @import "./base/mixins";
 
 * {
-  font-family: Charmonman !important;
+  //font-family: Charmonman !important;
+  font-family: "EB Garamond", serif;
 }
 
 .container {
