added 3 classes for the baddest 3 movies rating

--- a/css/style.css
+++ b/css/style.css
@@ -36,4 +36,19 @@ table tr:nth-child(odd) td {
   background-color: #eee;
 }
 
+table tr:nth-child(odd) td.bad,
+table .bad {
+  background-color: #f15d14;
+}
+
+table tr:nth-child(odd) td.half,
+table .half {
+  background-color: #f18914;
+}
+
+table tr:nth-child(odd) td.worst,
+table .worst {
+  background-color: #f11414;
+}
+
 /*# sourceMappingURL=style.css.map */
