--- a/css/style.css
+++ b/css/style.css
@@ -36,4 +36,12 @@ table tr:nth-child(odd) td {
   background-color: #eee;
 }
 
+.good {
+  background-color: #f1cc14;
+}
+
+.top {
+  background-color: #f1ea14;
+}
+
 /*# sourceMappingURL=style.css.map */
