--- a/css/style.scss
+++ b/css/style.scss
@@ -27,3 +27,11 @@ table {
     background-color: #eee;
   }
 }
+
+.good {
+  background-color: #f1cc14;
+}
+
+.top {
+  background-color: #f1ea14;
+}
