an error has been resolved

--- a/css/style.css
+++ b/css/style.css
@@ -1,39 +1,29 @@
-@import url("https://fonts.googleapis.com/css?family=Charmonman");
+@import url("https://fonts.googleapis.com/css?family=EB+Garamond:400,700");
 * {
   box-sizing: border-box;
+  font-family: "EB Garamond", serif;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 .clearfix::after {
   clear: both;
   content: "";
-  display: block;
-}
+  display: block; }
 
 * {
-  font-family: Charmonman !important;
-}
+  font-family: "EB Garamond", serif !important; }
 
 .container {
   display: block;
   font-size: 20px;
   margin: 0;
-  padding: 0;
-}
+  padding: 0; }
 
 table {
   border: 1px solid #000;
-  width: 50%;
-}
-
-table td {
-  background-color: #ccc;
-  padding: 10px;
-}
-
-table tr:nth-child(odd) td {
-  background-color: #eee;
-}
-
-/*# sourceMappingURL=style.css.map */
+  width: 50%; }
+  table td {
+    background-color: #ccc;
+    padding: 10px; }
+  table tr:nth-child(odd) td {
+    background-color: #eee; }
