--- a/css/style.scss
+++ b/css/style.scss
@@ -5,7 +5,7 @@
 
 * {
   //font-family: Charmonman !important;
-  font-family: "EB Garamond", serif;
+  font-family: "EB Garamond", serif !important;
 }
 
 .container {
